Fixed the z-index of TimePicker to 10000 to have similar with DatePicker (Materialize component)

--- a/src/main/resources/gwt/material/design/addins/public/css/timepicker.css
+++ b/src/main/resources/gwt/material/design/addins/public/css/timepicker.css
@@ -57,7 +57,7 @@
     right: 0 !important;
     height: 100% !important;
     background: rgba(0,0,0,0.3);
-    z-index: 999;
+    z-index: 10000;
 }
 
 
